--- a/index.html
+++ b/index.html
@@ -4,18 +4,40 @@
     <meta charset="UTF-8">
     
     <title>Vue 3</title>
+    <style>
+        .box {
+            background: purple;
+            height: 200px;
+            width: 200px;
+        }
+        .box.two {
+            background-color: red;
+        }
+        .box.three {
+            background-color: green ;
+        }
+        [v-cloak] {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-    <div id="app">
+    <div id="app" v-cloak>
         <h1> {{greeting}} </h1>
         <input v-model="greeting">
+        <hr/>
+        <div v-if="isVisible" class="box"></div>
+        <div v-else-if="isVisibleTwo"  class="box two"></div>
+        <div v-else class="box three"></div>
     </div>
     <script src="https://unpkg.com/vue@next"></script>
     <script>
        let app =  Vue.createApp({
             data: function() {
                 return{
-                    greeting: 'Hello from Vue'
+                    greeting: 'Hello from Vue',
+                    isVisible: false,
+                    isVisibleTwo: true,
                 }
             }
         })
