--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <h1> {{greeting}} </h1>
         <input v-model="greeting">
         <hr/>
+        <button v-on:click="isVisible= !isVisible">Show Box</button>
         <div v-if="isVisible" class="box"></div>
-        <div v-else-if="isVisibleTwo"  class="box two"></div>
-        <div v-else class="box three"></div>
+        
     </div>
     <script src="https://unpkg.com/vue@next"></script>
     <script>
@@ -37,7 +37,7 @@
                 return{
                     greeting: 'Hello from Vue',
                     isVisible: false,
-                    isVisibleTwo: true,
+                    
                 }
             }
         })
